[gd_scene load_steps=14 format=3 uid="uid://cop73h0esmvdg"]

[ext_resource type="Script" path="res://Scripts/Joueur/Joueur.gd" id="1_i4xdb"]
[ext_resource type="SpriteFrames" uid="uid://6fj32vmnsuvj" path="res://Scenes/Joueur/Crusader_sprite_frames.tres" id="2_qe1pp"]
[ext_resource type="SpriteFrames" uid="uid://b2f6pf5ngmnpp" path="res://Scenes/Joueur/Elf_sprite_frames.tres" id="2_xpetw"]
[ext_resource type="PackedScene" uid="uid://cjjeuwcnjg1f5" path="res://Scenes/Joueur/scene_crossbow.tscn" id="3_dddkc"]
[ext_resource type="SpriteFrames" uid="uid://beqo7tima8u8t" path="res://Scenes/Joueur/Fighter_sprite_frames.tres" id="3_wibih"]
[ext_resource type="Script" path="res://Scripts/Ressources/Ressource_Character_Stats.gd" id="5_4uqv8"]
[ext_resource type="PackedScene" uid="uid://nm8x4tvkupy" path="res://Scenes/Joueur/scene_shield.tscn" id="8_fdvgm"]
[ext_resource type="PackedScene" uid="uid://dq0fgpt05385k" path="res://Scenes/Joueur/scene_sword.tscn" id="9_66es1"]

[sub_resource type="Resource" id="Resource_lefar"]
script = ExtResource("5_4uqv8")
max_hp = 5
speed = 200

[sub_resource type="Resource" id="Resource_5r0pe"]
script = ExtResource("5_4uqv8")
max_hp = 6
speed = 180

[sub_resource type="Resource" id="Resource_urgeo"]
script = ExtResource("5_4uqv8")
max_hp = 8
speed = 150

[sub_resource type="CircleShape2D" id="CircleShape2D_s8dhf"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_p4n8s"]
radius = 22.0227

[node name="Joueur" type="CharacterBody2D" groups=["Joueur"]]
z_index = 1
collision_mask = 8
motion_mode = 1
script = ExtResource("1_i4xdb")
animations = Array[SpriteFrames]([ExtResource("2_xpetw"), ExtResource("3_wibih"), ExtResource("2_qe1pp")])
starting_stats = Array[ExtResource("5_4uqv8")]([SubResource("Resource_lefar"), SubResource("Resource_5r0pe"), SubResource("Resource_urgeo")])

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(0, -9)
sprite_frames = ExtResource("2_qe1pp")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.699141

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_s8dhf")

[node name="InvulnTimer" type="Timer" parent="."]

[node name="CoinVaccum" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoinVaccum"]
shape = SubResource("CircleShape2D_p4n8s")
debug_color = Color(0.5094, 0.573541, 0.211127, 0.42)

[node name="CrossBow" parent="." instance=ExtResource("3_dddkc")]
z_index = 1
enabled = false

[node name="Sword" parent="." instance=ExtResource("9_66es1")]
enabled = false

[node name="Shield" parent="." instance=ExtResource("8_fdvgm")]
enabled = false

[connection signal="died" from="." to="CrossBow" method="_on_joueur_died"]
[connection signal="died" from="." to="Sword" method="_on_joueur_died"]
[connection signal="timeout" from="InvulnTimer" to="." method="_on_invuln_timer_timeout"]
